make sure warning text is legible

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -3558,6 +3558,10 @@ GtkImage.warning,
     color: @warning_color;
 }
 
+.label.warning {
+    color: shade (@warning_color, 0.75);
+}
+
 GtkImage.success,
 .success {
     color: @success_color;
